<resources>
    <string name="app_name">DrawGuessGame</string>

    <!--    MAIN MENU-->
    <string name="main_title">DRAW\GUESS</string>
    <string name="main_login">LOGIN</string>
    <string name="main_help">HELP</string>
    <string name="main_pwd">PASSWORD</string>
    <string name="main_id">ID</string>
    <string name="main_register_text">Register new account</string>
    <string name="main_register">SIGN UP</string>
    <string name="main_register_info">Please enter\nthe valid email address\nand a password</string>
    <string name="main_display_name">DISPLAY NAME</string>
    <!--    MAIN MENU <END>-->


    <!--    CHOOSE GAME ACTIVITY-->
    <string name="choose_create_game">CREATE GAME</string>
    <string name="choose_join_game">JOIN GAME</string>
    <string name="choose_waiting_text">Waiting for Players...</string>
    <!--    CHOOSE GAME ACTIVITY <END>-->


    <!--    DRAW ACTIVITY-->
    <string name="button_small">S</string>
    <string name="button_medium">M</string>
    <string name="button_large">L</string>>
    <string name="button_share">SHARE</string>
    <string name="button_clear">CLEAR</string>
    <string name="button_eraser">Eraser</string>
    <!--    DRAW ACTIVITY <END>-->


    <!--    LEADER BOARD-->
    <string name="leader_board_title">LEADER BOARD</string>
    <string name="leader_board_share">Share with your friend!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    LEADER BOARD <END>-->

</resources>
