<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:clickable="true"
    tools:context=".RegisterFragment">


    <ImageView
        android:id="@+id/screen1_register_profile_img"
        android:layout_width="150dp"
        android:layout_height="150dp"

        android:background="@drawable/cat"
        android:onClick="getImageFromGallery"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/screen1_register_guideline"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/screen1_register_guideline"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="230dp" />

    <EditText
        android:id="@+id/screen1_register_edit_text_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/screen1_register_guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/screen1_register_text_name"
        />

    <TextView
        android:id="@+id/screen1_register_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_display_name"
        android:textSize="20dp"

        app:layout_constraintTop_toBottomOf="@id/screen1_register_edit_text_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/screen1_register_edit_text_id"
        />


    <EditText
        android:id="@+id/screen1_register_edit_text_id"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/screen1_register_text_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/screen1_register_text_id"
        />

    <TextView
        android:id="@+id/screen1_register_text_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_id"
        android:textSize="20dp"

        app:layout_constraintTop_toBottomOf="@id/screen1_register_edit_text_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/screen1_register_edit_text_pwd"
        />

    <EditText
        android:id="@+id/screen1_register_edit_text_pwd"
        android:layout_width="200dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/screen1_register_text_id"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/screen1_register_text_pwd" />


    <TextView
        android:id="@+id/screen1_register_text_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_pwd"
        android:textSize="20dp"

        app:layout_constraintTop_toBottomOf="@id/screen1_register_edit_text_pwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/screen1_register_guideline2"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/screen1_register_guideline2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="456dp" />


    <Button
        android:id="@+id/screen1_register_button_register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/main_register"
        android:textSize="30dp"

        android:onClick="signUpNewAccount"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/screen1_register_guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />



    <TextView
        android:id="@+id/screen1_register_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/main_register_info"
        android:textSize="20dp"

        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/screen1_register_button_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>